[gd_scene load_steps=2 format=3 uid="uid://drh8uvj5mwxu7"]

[ext_resource type="Script" uid="uid://cwobiru052n0i" path="res://levels/CharacterSelection.gd" id="1_character_selection"]

[node name="CharacterSelection" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_character_selection")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.15, 0.15, 0.2, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="TitleLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.9, 0.9, 1)
theme_override_font_sizes/font_size = 48
text = "SELECT YOUR CHARACTER"
horizontal_alignment = 1

[node name="CharacterButtons" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="WarriorButton" type="Button" parent="CenterContainer/VBoxContainer/CharacterButtons"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24
text = "Commander
"

[node name="RogueButton" type="Button" parent="CenterContainer/VBoxContainer/CharacterButtons"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24
text = "Reaper
"

[node name="MageButton" type="Button" parent="CenterContainer/VBoxContainer/CharacterButtons"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24
text = "Swordmaster
"

[node name="CharacterInfo" type="VBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="NameLabel" type="Label" parent="CenterContainer/VBoxContainer/CharacterInfo"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.85, 0.4, 1)
theme_override_font_sizes/font_size = 36
text = "The Commander"
horizontal_alignment = 1

[node name="DescriptionLabel" type="Label" parent="CenterContainer/VBoxContainer/CharacterInfo"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 20
text = "Strong melee fighter with high health and armor
Health: 150
Speed: 5.0"
horizontal_alignment = 1
autowrap_mode = 2

[node name="StartButton" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 28
text = "START GAME"
